caasim, my folder html, and style for the footer

--- a/index.html
+++ b/index.html
@@ -12,8 +12,52 @@
     </header>
 
 
-    <footer>
         <!-- Caasim please write your footer code here 👇 -->
-    </footer>
+        <footer class="footer">
+            <div class="familytree">
+                <div>
+                    <h5 class="so">CONTACTS</h5>
+                    <P class="p">4060 reppert coal Ro ad Jackson ms 39201 USA (+2317772479020)
+                         (+231886892006) Contact@yourcompany.com </P>
+                </div>
+                <div>
+                    <H5 class="so">INFORATION</H5>
+                    <P class="p">About Us Delivery Information Privacy Policy Terms & Conditions Contact Us</P>
+                </div>
+                <div>
+                    <h5 class="so">SERVICES</h5>
+                   <p class="p"> Returns Site Map Wish List My Account Order History</p>
+                </div>
+                <div>
+                    <h5 class="so">NEWSLETTER</h5>
+                    <P class="p">There are many variations of passages of lorem ipsum available, but the majority have</P>
+                    <button class="but">Enter Your
+                       spa <i class="fa-solid fa-magnifying-glass"></i> 
+                    </button>
+                </div>
+            </div>
+            <hr>
+            <article class="one">
+                <div >
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-google"></i> 
+                    <i class="fa-brands fa-linkedin"></i> 
+                    <i class="fa-brands fa-twitter"></i> 
+                    <i class="fa-brands fa-youtube"></i> 
+    
+                </div>
+                <div class="Shop">
+                    &copy; 2018 All Rights Reserved fancyShop
+                </div>
+                <div class="down">
+                    <img src="./image/download (1).png" alt="" class="load">
+                    <img src="./image/download.png" alt= ""class="load">
+                    <img src="./image/images.png" alt="" class="load">
+                    <img src="./image/download.jfif" alt="" class="load">
+                    <img src="./image/download (2).png" alt="" class="load">
+                </div>
+            </article>
+        </footer>
+        
 </body>
 </html>
